# V-Engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  files.txt  fragment.glsl  pom.xml  todo.md  vertex.glsl
docs/: V-EnginePackageFormat documentation.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
res/: demo.vpf
res/SampleScene/: pc.mtl
res/wood/: stained_pine_rough_4k.exr
resources/: fragment.glsl  vertex.glsl
shaders/: basic.frag  basic.vert
src/: SimpleSceneFactory.h  main.cpp  test.h
src/camera/: Camera.cpp  Camera.h
src/component/: Component.cpp  Component.h  MeshRenderer.cpp  MeshRenderer.h
src/core/: Engine.h  Transform.cpp  Transform.h
src/core/transformation/: HierarchyNode.cpp  HierarchyNode.h  Node.h
src/debug/: Logger.cpp  Logger.h  LoggingType.h
src/gameobject/: GameObject.cpp  GameObject.h
src/lighting/: Light.cpp  Light.h  LightType.h
src/lightning/: Light.cpp  Light.h  LightType.h  PointLight.h
src/main/java/org/engine/vengine/: GameObject.java  Scene.java  TestObject.java
src/main/java/org/engine/vengine/boot/: Engine.java  EngineConfig.java
src/main/java/org/engine/vengine/core/: Engine.java
src/main/java/org/engine/vengine/ecs/: Component.java
src/main/java/org/engine/vengine/filesystem/: DefaultResourceLoader.java  FileManager.java  FileSystemException.java  IResourceLoader.java  Resource.java  ResourceType.java
src/main/java/org/engine/vengine/logging/: Appender.java  ConsoleAppender.java  LogLevel.java  LogManager.java  LogRecord.java  Logger.java  LoggerConfig.java  RollingFileAppender.java
src/main/java/org/engine/vengine/mesh/: Mesh.java  MeshData.java
src/main/java/org/engine/vengine/platform/: IInput.java  IWindow.java  Input.java  Window.java
src/main/java/org/engine/vengine/platform/windows/: Input.java  Window.java
src/main/java/org/engine/vengine/render/: Camera.java  RenderAPI.java  Renderer.java  Shader.java  Size.java  StupidObjectThatRenders.java  Window.java  WindowData.java
src/main/java/org/engine/vengine/render/material/: Material.java
src/main/java/org/engine/vengine/render/renderer/: MeshRenderer.java  Renderer.java
src/main/java/org/engine/vengine/render/shader/: Shader.java  ShaderProgram.java
src/main/java/org/engine/vengine/service/: Service.java
src/main/java/org/engine/vengine/service/config/: Config.java  ConfigService.java
src/main/java/org/engine/vengine/shader/: Shader.java
src/main/java/org/engine/vengine/texture/: Image.java  Texture.java
src/main/java/org/engine/vengine/util/: CursorMode.java  Size.java  StupidObjectThatRenders.java  Transform.java
src/main/java/org/engine/vtest/: Main.java  ShaderRenderTest.java
src/main/resources/: config.engine.ini  logback.xml
src/material/: Material.cpp  Material.h
src/mesh/: Mesh.cpp  Mesh.h
src/parser/obj2mesh/: OBJ2MeshParser.cpp  OBJ2MeshParser.h
src/platform/shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderType.h
src/renderer/: MeshRenderer.h
src/rendering/: DefaultRenderPass.h  MeshRenderer.cpp  MeshRenderer.h  RenderPass.h  Renderer.cpp  Renderer.h
src/scene/: Scene.cpp  Scene.h  SceneFactory.h  SceneManager.cpp  SceneManager.h
src/shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/texture/: Texture.cpp  Texture.h
src/utils/: StringUtils.h
src/vpf/: CollisionEntry.h  FileEntryHeader.h  Hash128.h  Header.h  Package.cpp  Package.h  PathTableEntry.h  VPFHeader.h  \
src/window/: InputType.h  Window.cpp  Window.h
